# Gee

./: .gitignore  cache.md  readme.md  rpc.md
geecache_cpp/: CMakeLists.txt  readme.md  resume.md
geecache_cpp/benchmarks/: CMakeLists.txt  geecache_benchmark.cpp
geecache_cpp/build_codex/src/: geecachepb.pb.cc  geecachepb.pb.h
geecache_cpp/build_codex/tests/: consistenthash_test  geecache_test  http_test  lru_test  singleflight_test
geecache_cpp/docs/: day1.md  day2.md  day3.md  day4.md  day5.md  day6.md  day7.md  readme.md
geecache_cpp/proto/: geecachepb.proto
geecache_cpp/src/: CMakeLists.txt  byteview.cpp  byteview.h  cache.cpp  cache.h  geecache.cpp  geecache.h  http.cpp  http.h  peers.h
geecache_cpp/src/consistenthash/: consistenthash.cpp  consistenthash.h
geecache_cpp/src/lru/: lru.h
geecache_cpp/src/singleflight/: singleflight.cpp  singleflight.h
geecache_cpp/tests/: CMakeLists.txt  consistenthash_test.cpp  geecache_test.cpp  http_test.cpp  lru_test.cpp  singleflight_test.cpp
geecache_go/: CLAUDE.md  byteview.go  cache.go  geecache.go  geecache_benchmark_test.go  geecache_test.go  go.mod  http.go  http_test.go  peers.go  readme.md
geecache_go/cmd/: main.go  readme.md
geecache_go/consistenthash/: consistenthash.go  consistenthash_test.go
geecache_go/geecachepb/: geecachepb.pb.go  geecachepb.proto
geecache_go/lru/: lru.go  lru_test.go
geecache_go/singleflight/: singleflight.go  singleflight_test.go
geerpc_cpp/: CMakeLists.txt  README.md  request.md
geerpc_cpp/doc/: geerpc-day1.md  geerpc-day2.md  geerpc-day3.md  geerpc-day4.md  geerpc-day5.md  geerpc-day6.md  geerpc-day7.md
geerpc_cpp/examples/: main.cpp
geerpc_cpp/include/geerpc/client/: client.h  xclient.h
geerpc_cpp/include/geerpc/codec/: codec.h  protobuf_codec.h
geerpc_cpp/include/geerpc/registry/: registry.h
geerpc_cpp/include/geerpc/server/: server.h  service.h
geerpc_cpp/proto/: geerpc.proto
geerpc_cpp/src/client/: client.cpp  xclient.cpp
geerpc_cpp/src/codec/: protobuf_codec.cpp
geerpc_cpp/src/registry/: registry.cpp
geerpc_cpp/src/server/: server.cpp  service.cpp
geerpc_go/: benchmark_test.go  client.go  client_test.go  debug.go  metadata.go  overload_test.go  server.go  service.go  service_test.go  shutdown_test.go
geerpc_go/artifacts/: cpu.prof
geerpc_go/codec/: codec.go  gob.go  readme.md
geerpc_go/doc/: failover.md  geerpc.md  key-routing.md
geerpc_go/main/: main.go
geerpc_go/registry/: registry.go  registry_test.go
geerpc_go/xclient/: benchmark_test.go  discovery.go  discovery_consistent_hash.go  discovery_gee.go  discovery_least_conn.go  discovery_weighted.go  pool.go  xclient.go  xclient_test.go
